# Entelgia

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  BRANDING.md  CNAME  CODE_OF_CONDUCT.md  Changelog.md  Changelog.md.txt  Code of Conduct.md  Code of Conduct.md.txt  Contributing  Contributing.md  Contributors.md  DEAD_CODE_AUDIT.md  DEMO_CONSCIOUS_DIALOGUE.md  Entelgia_production_meta.py  Entelgia_production_meta_200t.py  FAQ.md  FIX_PR32.md  LICENSE  LICENSE.txt  Live Dialog.txt  PACKAGE_STRUCTURE.md  Q&A.md  README.md  README.md.backup  README.md.txt  REDDIT_POST.md  ROADMAP.md  Requirements.md  Requirements.txt  Roadmap.md  SECURITY.md  SPEC.md  Security_Policy.md  TROUBLESHOOTING.md  capilot_instructions.md  clear_memory.py  demo_enhanced_dialogue.py  (+23 more)
.github/: Capilot_instructions.md  dependabot.yml
Assets/: BRANDING.md  README.md  entelgia_correlation_map.html
CAPILOT/: CAPILOT.md
Entelgia-2.4.0/: .gitattributes  .gitignore  ARCHITECTURE.md  Changelog.md  Contributing.md  SPEC.md  entelgia_demo.md  requirements.txt  whitepaper.md
docs/: AWESOME_LISTS_SUBMISSION.md  CONFIGURATION.md  DEPENDABOT_SETUP.md  Entelgia_Full_Dem  Evaluation-Report.md  PRONOUN_FEATURE.md  PR_SUMMARY.md  QUICK_PR_GUIDE.md  SKILL.md  ecosystem.md  entelgia_demo.md  memory_security.md  research1.md
entelgia/: __init__.py  ablation_study.py  circularity_guard.py  constants.py  context_manager.py  dialogue_engine.py  dialogue_metrics  dialogue_metrics.py  energy_regulation.py  enhanced_personas.py  fixy_interactive.py  fixy_research_trigger.py  fixy_semantic_control.py  humanizer.py  integration_core.py  integration_memory.json  integration_memory_store.py  long_term_memory.py  loop_guard.py  progress_enforcer.py  research_context_builder.py  response_evaluator.py  source_evaluator.py  topic_enforcer.py  topic_style.py  wavestreamer_entelgia_fixy_adapter.py  web_research.py  web_tool.py
examples/: demo_energy_regulation.py  demo_enhanced_dialogue.py
logos/: README.md  (+2 more)
(+77 files in other folders)
